--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title> First Website</title>
 </head>
 <body>
-  <h1>Hello WebAR</h1>
+  <h1>Hello WebAR </h1>
+  <h2>Basics</h2>
 </body>
 </html>
