--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
   </head>
   <body>
+    <h1>Hello WEB AR</h1>
+    <p>This ia a basic website integrated with Google Modelviewer</p>
     <!-- <model-viewer> HTML element -->
     <model-viewer src="RobotExpressive.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay>
       <button class="Hotspot" slot="hotspot-1" data-position="1.337411759255779m 1.5581903775230195m 0.1455968900042069m" data-normal="0.24590263993366596m -0.9420759373178189m -0.22808949997842237m" data-visibility-attribute="visible">
